Added JAXB as extrenal LIB - (Task #1062)
Put your Message here.

---
Task #1062: Migrate to Java 11 and Eclipse 2021-12